# security_mcp

./: .gitignore  .mcp-sse.json  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  DEPLOYMENT_CHECKLIST.md  DOCKER_VERIFICATION.md  Dockerfile  LICENSE  NOTICE  README.md  bearer_mcp_main.py  bearer_mcp_server.py  build.sh  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: devops-ci-expert.md  mcp-server-expert.md  mcp-teacher.md  pythonic-expert.md
.github/: container-structure-test.yaml
.github/workflows/: ci.yml  codeql.yml  compliance.yml  dependencies.yml  docker.yml  release.yml  sbom.yml  security.yml
bearer_mcp/: README.md  __init__.py  __main__.py  server.py
bearer_mcp/core/: __init__.py  bearer_executor.py  config.py
bearer_mcp/tools/: __init__.py  definitions.py  handlers.py
bearer_mcp/transport/: __init__.py  sse.py  stdio.py
bearer_mcp/utils/: __init__.py  path_utils.py
scripts/: generate-sbom.sh  test-github-actions-local.sh  test-sbom-generation.sh
tests/: smoke_test.py  test_bearer_integration.py  test_server.py
